# valorant-watcher-rust

./: .gitignore  Cargo.toml  README.md  build.rs  config.json
.github/workflows/: release.yml
installer/macos/: install.command  uninstall.command
installer/windows/: valorant-watcher.iss
src/: backend.rs  config.rs  dedup.rs  error.rs  events.rs  hardware.rs  lockfile.rs  logging.rs  main.rs  orchestrator.rs  paths.rs  session.rs  session_service.rs  single_instance.rs  updater.rs  watchers.rs  ws.rs
